<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_bg"
    tools:context=".todo.ToDoFragment">
    android:background="@color/blue_bg"
    tools:context=".ToDoFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_priority"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/Priority"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_date_time"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/DateTime"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_none"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/None"
                android:textColor="#000000" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_todo"
            android:layout_width="wrap_content"
            android:layout_height="333dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange_1"
            android:clickable="true"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_add_todo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>